# OSU-Website

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
backend/: production.py  settings.py  test_settings.py  urls.py
deploy/: nginx.conf  start.sh
frontend/: index.html  jsconfig.json  package.json  tailwind.config.js  ui.config.json  vite.config.js
frontend/src/: App.css  App.jsx  colors.js  index.jsx  queries.js
frontend/src/components/: Header.jsx  Layout.jsx
frontend/src/components/auth/: AuthenticatedRoute.jsx  EnterOTP.jsx  LoginPage.jsx  OTPLogin.jsx  PasswordLogin.jsx
frontend/src/components/match/: MatchCard.jsx  MatchGallery.jsx  MatchHeader.jsx  MatchMvpMsp.jsx  MatchScoreForm.jsx  MatchTimeline.jsx  SubmitScore.jsx  utils.js
frontend/src/components/roster/: Registration.jsx
frontend/src/components/tournament-manager/: CreateFieldForm.jsx  CreatedFields.jsx
frontend/src/components/ui/: alert.jsx  badge-delta.jsx  badge.jsx  breadcrumb.jsx  button.jsx  navigation-menu.jsx  otp-field.jsx  separator.jsx  table.jsx  tabs.jsx  timeline.jsx
frontend/src/lib/: queryClient.js
frontend/src/pages/: Home.jsx  Login.jsx  MatchDetails.jsx  PlayerDetail.jsx  PlayersList.jsx  Tournament.jsx  TournamentManager.jsx  TournamentSchedule.jsx  TournamentStandings.jsx  TournamentTeam.jsx
frontend/src/services/: authService.js  playerService.js
frontend/src/utils/: csrf.js  index.js
osu/: admin.py  api.py  apps.py  commons.py  models.py  urls.py  utils.py
osu/management/commands/: create_players_from_csv.py  import_roster.py
osu/management/data/: mul_s5_players.csv  mul_s5_roster.csv
osu/match/: api.py  models.py  schema.py
osu/match/tests/: test_match_api.py
osu/migrations/: 0001_initial.py  0002_team_player.py  0003_matchscore_spiritscore_tournament_positionpool_pool_and_more.py  0004_registration_base_price_registration_sold_price.py  0005_matchstats_matchevent.py
osu/player/: api.py  models.py  schema.py
osu/team/: api.py  models.py  schema.py
osu/team/tests/: __init__.py  test_team_api.py
osu/templates/: index.html
osu/templates/mail/: otp.html
osu/templatetags/: static_include.py
osu/tests/: base.py  test_match_api.py  test_otp_auth.py  test_password_auth.py
osu/tournament/: api.py  models.py  schema.py  utils.py
osu/user/: api.py  models.py  schema.py  utils.py
osu/user/tests/: __init__.py
scripts/: lint-commits
